Fixed save card on iOS. Fixed keyboard menu text

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -163,6 +163,7 @@
 .save-menu-button-title {
     text-align: center;
     font-size: 1.5rem;
+    background-color: inherit;
 }
 
 .save-state-icon {
