--- a/css/menu.css
+++ b/css/menu.css
@@ -29,7 +29,7 @@
 }
 
 .menu-header > a {
-    margin: 5px;
+    margin: 5px 5px 5px 15px;
     display: inline-block;
 }
 
